# INF574-project

./: .gitignore  README.MD
project_LSCMs/: .gitignore  CMakeLists.txt  LSCMs.cpp  LSCMs.h  main.cpp
project_LSCMs/data/: beetle.off  camelhead.off  hexagon.off
